feat: add force node deletion
